# mailfold-rust

./: Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs  types.rs
