[package]
name = "mailfold"
version = "0.1.0"
edition = "2021"
description = "Official Rust client SDK for Mailfold (https://github.com/isi1988/Mailfold)"
license = "MIT"
repository = "https://github.com/isi1988/mailfold-rust"
readme = "README.md"
keywords = ["mailfold", "email", "imap", "webmail", "client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
